--- a/SIR.Rmd
+++ b/SIR.Rmd
@@ -1,6 +1,7 @@
 ---
 title: "Epidemic dynamics"
 subtitle: "boxes and flows"
+author: "Jesse Brunner"
 date: "`r Sys.Date()`"
 output:
   tufte::tufte_handout: default
