--- a/Transmission.Rmd
+++ b/Transmission.Rmd
@@ -35,7 +35,7 @@ transmission is fundamental^[NIH, are you listening?] to the spread of infectiou
 In outline, transmission is deceptively simple: an infected host comes into contact with a susceptible host and, with some probability, transmits the infection. But that simple description belies all of the interesting and important nuance to these interactions. For instance, we might assume that hosts contact each other randomly, like molecules in a chemical reaction^[You might see this called "mass action" transmission.], but real hosts are more likely to contact certain individuals than others. They might live in families or herds. They have social networks of interactions. Heck, they just live closer to some than others. And that does not even begin to consider all of the reasons some infected individuals are more infectious to others, why some susceptible individuals are more susceptible, and so on. To have a thorough understanding of transmission you need to think about population dynamics, behavior, geography, physiology, immunology, pathogen dynamics, and more! Yup, transmission is a meaty topic.
 
 # We simplify
-Given this complexity, we need to step back and simplify^[I am fond of saying that the goal of ecology is, or should be, to see how _litte_ we need to know about a system to have a good first approximation of how it works.]. How can we capture the general nature of the transmission process? 
+Given this complexity, we need to step back and simplify^[I am fond of saying that the goal of ecology is, or should be, to see how _little_ we need to know about a system to have a good first approximation of how it works.]. How can we capture the general nature of the transmission process? 
 
 We wrote out one version of how to represent the transmission process mathematically when we were putting together our first $SIR$ model. We said the transmission rate was:
 $$
@@ -44,7 +44,7 @@ $$
 which can be read, from left to right, as susceptible hosts ($S$) contact other hosts at some rate, which likely is a function of the overall size of the population ($c(N)$), some fraction of which are with infectious individuals ($I/N$), and each of which has some probability of causing an infection ($\pi$). This captures the basic steps in the transmission process, and some version of this is used in most models of infectious disease, but I would like to point out that it is making several important, perhaps questionable assumptions:
 
   * Contacts are made randomly. Every individual is equally likely to contact any other individual. There are no social networks here, nor geographic space. 
-  * Individuals in a box are identical. All individuals in the $S$ box are equally susceptible to infection and all those in the $I$ box are equally infectious. Moreover, there is no time-course of infectiousness (at least as written); as soon as an individual enters the $I$ box it is just as infectious as an indvidual that has been there for ages.
+  * Individuals in a box are identical. All individuals in the $S$ box are equally susceptible to infection and all those in the $I$ box are equally infectious. Moreover, there is no time-course of infectiousness (at least as written); as soon as an individual enters the $I$ box it is just as infectious as an individual that has been there for ages.
   
 These assumptions are, well, wrong, but it might not matter a great deal. At least in large populations it might be reasonable to assume that the more-infectious-than-average individuals are balanced out by a group of less-infectious-than-average individuals, and so on. Similarly, at a large scale, contact structure (networks, space, etc.) might sort of wash out. In other words, this model, or transmission term in a model, does a pretty good job of describing the average transmission rate^[These and similar models are called "mean field" by the mathematically inclined. We love our jargon!]. We will come back to this averageness in another writing, but for now let's just note the assumptions and move on.
 
@@ -52,7 +52,7 @@ These assumptions are, well, wrong, but it might not matter a great deal. At lea
 
 # Two versions of the same simple model
 
-## Frequncy-dependent transmission
+## Frequency-dependent transmission
 In the prior discussion of the SIR model we made a simplifying assumption: "For simplicity, let's just assume that every susceptible makes $c'$ contacts per day, like 10 or something." And so we substituted $c'$ for $c(N)$. We then went on to say that $c' \times \pi = \beta$, since they are both constant values^[A constant times a constant is a constant.] in the model. Thus 
 
 \begin{equation*}
@@ -86,7 +86,7 @@ where $\beta =  c'' \pi$ as before^[Note that this new $\beta$ has different uni
 OK, so we have two versions that look pretty similar, only in one we divide by $N$. What's the big deal? Well, it turns out that it matters. 
 
 
-```{r, fig.margin=TRUE, fig.cap="Contact rates and rates of transmission in the frequency-dependent and density-dependent models.  $\\beta_{FD} = 10 \text{contacts per day}\times 0.05 probability of infection per contact = 0.5$.  \\beta_{DD} = 0.1 \text{contacts per day per host}\times 0.05 probability of infection per contact = 0.005 N$."}
+```{r, fig.margin=TRUE, fig.cap="Contact rates and rates of transmission in the frequency-dependent and density-dependent models.  $\\beta_{FD} = 10 \\text{contacts per day} \\times 0.05 \\text{chance of infection per contact} = 0.5$.  $\\beta_{DD} = 0.1 \\text{contacts per day per host} \\times 0.05 \\text{chance of infection per contact} = 0.005 N$."}
 df <- expand_grid(Density = 1:500, 
                   Form = c("Frequency-dependent", "Density-dependent"))
 df %>% 
@@ -111,12 +111,12 @@ In the density-dependent (DD) model it becomes
 $$
 R_{0_{DD}} = \frac{\beta N}{\alpha + \gamma}.
 $$
-This means that the ability for an infection to take-off in a population depends on the size (or density) of the population. Below some critical population size, the infection cannot successfully invade. Sure, there may be a bit of transmission, but it should sputter out. 
+This means that the ability for an infection to take-off in a population depends on the size (or density) of the population ($N$). Below some critical population size, the infection cannot successfully invade. Sure, there may be a bit of transmission, but it should sputter out. 
 
 This density-dependent logic forms the basis for culling to prevent disease from invading wildlife and agricultural populations^[I'm focusing on the invasion side of things. Culling or depopulation is also used to prevent continued transmission during epidemics of economically important diseases such as avian influenza in chickens, African swine fever in pigs, and foot and mouth disease in cattle.]. It has historically been applied broadly in wildlife because there are few other levers to pull^[For instance, [culling of Badgers, which can carry tuberculosis, in the UK.](https://www.nytimes.com/2019/03/09/science/culling-badgers-disease.html)].
 
 
-#Which version is most realistic?
+# Which version is most realistic?
 Historically, the density-dependent model had been applied to wildlife, whose density can vary a great deal through time and from place to place, and the frequency-dependent model was used for human diseases, as human populations are less varied on the scale of an epidemic^[Yes, the Black Death affected up to a third of Europe, but that is rare, whereas some epidemics in wildlife might cause die-offs of over 90\% of a population.]. The frequency-dependent model is also used for sexually transmitted infections. The logic is that the number of sexual partners is largely independent of population size, even in wildlife. 
 
 The reality is that both versions are cartoons, extreme simplifications of reality that are used more for mathematical convenience than because they reflect the actual biology. The truth is that measuring transmission rates is incredibly difficult, so usually we do not know which version is best. We just use one version, find a value of $\beta$ that makes the model produce reasonable results, and move on. And really, it often does not matter. If the population is (relatively) constant, either transmission term can be made to produce the same dynamics. 
@@ -138,63 +138,87 @@ df %>%
         legend.title=element_blank())
 ```
 
-When researchers have actually measured transmission rates across densities they have almost always found^[My own work with amphibians and ranavirus transmission included.] that the best description was something like the black line, where transmission increases with host population size, but starts to level off. There are more reasons for this than we have time to list^[Heterogeneity in susceptibility, contact networks, the reality that all transmission is local, ...], but any sort of saturating function generally works pretty well. What's more, researchers usually find that the frequency-dependent model is a pretty reasonable approximation over a wide varity of conditions and the density-dependent model just plain stinks. It's the bedrock assumption of myriad models and wildlife management policy and so on and it is just plain bad. Once again, it pays to check your assumptions. 
+When researchers have actually measured transmission rates across densities they have almost always found^[My own work with amphibians and ranavirus transmission included.] that the best description was something like the black line, where transmission increases with host population size, but starts to level off. There are more reasons for this than we have time to list^[Heterogeneity in susceptibility, contact networks, the reality that all transmission is local, ...], but any sort of saturating function generally works pretty well. What's more, researchers usually find that the frequency-dependent model is a pretty reasonable approximation over a wide variety of conditions and the density-dependent model just plain stinks. It's the bedrock assumption of myriad models and wildlife management policy and so on and it is just plain bad. Once again, it pays to check your assumptions. 
 
-# Transmission from vectors
 
-So far we have been thinking about transmission of directly-transmitted infections, where some sort of contact between an infected and susceptible host is required. But many infections are transmitted by an intermediate, other organism, called a vector^[Usually a blood-feeding arthropod like a mosquito, tick, or kissing bug.] In these cases a susceptible host is bitten at some rate that likely increases with vector abundance or density, and again some fraction of these are infected and thus infectious. It's just like the density-dependent model. 
+
+# Modes of horizontal transmission
+
+So far all of the scenarios for how transmission might work would fall into the box of horizontal transmission, and the box within that of direct contact. This would include parasites pass between hosts through casual contact (e.g., speaking to another person, shaking hands), sex, aerosols, and so on. We just need to decide what sort of contact is potentially infectious and then that is the contact rate of interest. But there are many other ways that parasites go from one host to the next, and they often involve an intermediate. But there are other routes of horizontal transmission that do not involve direct contact. Let's review a few.
+
+## Transmission from vectors
+
+Many important infections with names like Dengue, Zika, and malaria are transmitted by an intermediate, other organism, called a vector^[Usually a blood-feeding arthropod like a mosquito, tick, or kissing bug.] The parasite is usually transmitted during some sort of feeding event (e.g., a mosquito bite). The parasite might simply be along for the ride, simply being _mechanically_ moved from host to host by the vector, or the parasite might do something _biological_ in or on the vector. For instance, malaria parasites (_Plasmodium spp._) go through distinct developmental stages and replicate within the mosquito and the Lyme disease bacterium (_Borrelia burgdorferi_) upon its tick beginning a blood meal, migrates from the gut hemolymph to the salivary glands where it replicates before being injected into this new host. 
+
+Whether mechanical or biological, transmission occurs when infected vectors bite or feed on susceptible hosts. The rate of transmission is simply a function of the biting rate, which likely increases with vector abundance or density, and the probability of transmission given a bite. That is, transmission to the host is just like the density-dependent model, only it depends on the density or abundance of vectors ($V$^[A new box!]) rather than infected hosts:
 
 $$
-\frac{dI}{dt} = \beta_H V I - \alpha_H I - \gamma_H I
+\frac{dI}{dt} = \beta_H V S + \dots
 $$
-where $V$ is the density of infected vectors.
 
-We need to think about the
+With vector-borne parasites, there is also the reciprocal process of uninfected vectors, which I will represent with a $U$, being infected when they feed on or bite infected hosts. While the biting rate to a host (e.g., you or me, a crow) increases with vector density, the biting rate of a vector is probably pretty constant. So that brings us back to the frequency-dependent version of transmission where the rate at which vectors become infected is proportional to the probability that any given host is infected ($I/N$): 
 
 $$
-\frac{dV}{dt} = \beta_V\frac{I}{N}U - \alpha_V I
+\frac{dV}{dt} = \beta_V\frac{I}{N}U +\dots
 $$
-# Modes of transmission
+
+Even though there are two steps^[Describing $R_0$ for vector-borne diseases is doubly complicated!] in the transmission of a vector-borne parasite (vector-to-host and host-to-vector), they are both pretty straight forward from this perspective. This formulation also illustrates the (I hope intuitive) rationale controlling vector populations to reduce disease spread. Indeed, this was how malaria was eradicated from the United States. 
 
 
-## Horiontal transmission
+## Transmission from the environment (and free-living parasites)
 
-So far all of the scenarios for how transmission migth work would fall into the box of horizontal transmission. This would include parasites pass between hosts through casual contact (e.g., speaking to another person, shaking hands), sex, aerosols, and so on. We just need to decide what sort of contact is potentially infectious and then that is the contact rate of interest. But there are many other ways that parasites go from one host to the next, and they often involve an intermediate. 
+Some pathogens are transmitted from the abiotic components of the environment (e.g., water, soil, doorknobs). They tend to be environmentally resistant outside of a host, at least to a degree (hours^[E.g., SARS-CoV2] to weeks^[E.g., [hookworm](https://www.cdc.gov/parasites/hookworm/biology.html)] to years^[E.g., spores of _Bacillus anthracis_, the cause of anthrax, frequently [survive in the soil for years and even decades!](https://www.sciencedirect.com/science/article/pii/S0098299709000612)]). Or they might be free-living outside of a host (e.g., ticks and mosquitoes, trematodes and myriad worms). The point is that hosts obtain the parasite from somewhere in the environment rather than directly from another host or vector. 
 
-# Transmission from the environment
-
-Many pathogens are transmitted from the abiotic components of the environment (e.g., water, soil, doorknobs). They tend to be environmentally resistant outside of a host, at least to a degree (hours^[E.g., SARS-CoV2] to weeks^[E.g., [hookworm](https://www.cdc.gov/parasites/hookworm/biology.html)] to years^[E.g., spores of _Bacillus anthracis_, the cause of anthrax, frequently [survive in the soil for years and even decades!](https://www.sciencedirect.com/science/article/pii/S0098299709000612)]). Or they might be free-living outside of a host (e.g., ticks and mosquitoes, trematodes and myriad worms). The point is that hosts obtain the parasite from somewhere in the environment rather than directly from another host or other animal. 
-
-If you were trying to describe environmental transmssion mathematically, you would need to keep track of the number or desnity of those parasites. That is, you'd want another box called $P$. Transmission would then look something like this:
+If you were trying to describe environmental transmission mathematically, you would need to keep track of the number or density of those parasites. That is, you'd want another box called $P$. Transmission would then look something like this:
 
 $$
 \frac{dI}{dt} = \beta P S + \dots
 $$
-where $\beta$ is basically the contact rate with _parasites_ times the probability infection given a contact. This again assumes random encounters and movements, like before. This way of thinking of transmission might be reasonable for anthrax in the environment or ticks that are questing for hosts in a particular spot. However, other parasites actually seek out their hosts. They swim or fly to their hosts, which is far from passive. We might thus make $\beta$ really big, to account for the fact that the contact rate is going to be very high, or we might instead think about this as akin to predation and use a different formulation. But really, the difference is that the infections come from $P$ rather than from the $I$.
+where $\beta$ is basically the contact rate with _parasites_ times the probability infection given a contact. This again assumes random encounters and movements, like before. This way of thinking of transmission might be reasonable for anthrax in the environment or ticks that are questing for hosts in a particular spot. 
+
+However, other parasites actually seek out their hosts. They swim or fly to their hosts, which is far from passive. We might thus make $\beta$ really big, to account for the fact that the contact rate is going to be very high, or we might instead think about this as akin to predation and use a different formulation. But broadly, we might still lump the transmission of free-living, host-seeking parasites in with environmental transmission because new infections come from the $P$ parasites in the environment rather than from the $I$ infected hosts or the $V$ vectors that need to first be infected^[Mathematical thinking has a way of grouping together things or processes that seem very distinct otherwise.].
+
+(Analogous to the vector-borne diseases, we would also need to describe how pathogens were shed into the $P$ box (i.e., pathogens in the environment). This might simply be $\frac{dP}{dt} = \mu I - \omega V$, where $\mu$ is the rate at which infected individuals shed parasites and $\omega$ is the rate at which parasites in the environment degrade.)
+
+
 
 ## Trophic transmission
 
-Sometimes parasites get into new hosts when they are consumed. Often this is a predator eating an infected prey. Frequently parasites with complex life cycles (e.g., XXX), that is parasites that have distinct reproductive and intermediate stages, are transmitted this way. For instance, the trematode that frequently causes limb deformities in amphibians,  _Riberoiea ondantrae_, LIFE CYCLE
+Sometimes parasites get into new hosts when their former host is consumed. That is, predators can get their prey's parasites^[This raises an interesting question about whether and why predators are particularly vulnerable to disease. Think about the taboo around cannibalism, an otherwise efficient way to get precisely the protein, minerals, and nutrients needed to make more of you.]. Frequently parasites with complex life cycles, that is (almost always multicellular) parasites that have distinct reproductive and intermediate stages in different hosts, are transmitted this way. 
 
-## Vector transmission
+For instance, the trematode flat worm that frequently causes limb deformities in amphibians,  [_Ribeiroia ondatrae_](https://en.wikipedia.org/wiki/Ribeiroia), begin life as eggs pooped into the water by wading birds or mammals. These develop into miracidia, a free-living, free-swimming stage that attacks ram's horn snails and form a stage called rediae^[Castrating the snails!], which then release a second free-living stage called cercariae that encyst in amphibians^[Especially near or in the limb bud of tadpoles, which can split prevent a leg from growing or split it in two!] and fish and form metacercariae. These infected frogs are then preyed upon by birds (and mammals)---That's the trophic transfer! The rest was just lead up---in which the metacercariae develop into adults^[Finally a stage with a simple name!] in the GI track, mate, and lay eggs. Quite a life cycle, right? 
 
-mechanical vs. biolotical
+I'm sure you are dying to know how one might describe this trophic transmission mathematically. Well, let's walk through the logic. An uninfected host gets it by consuming an infected prey, so there are the two parts: 
 
-## Vertical transmission
+1. Feeding rate. This might be a constant or it could be something fancier like a type II functional response^[[Google it.](https://en.wikipedia.org/wiki/Functional_response)]. It is a contact rate, just a specialized kind of contact.
+2. Probability any given prey is infected. Does this seem familiar? That probability is just the proportion of prey that are infected.
 
-Lastly, there are some infections that are passed on from mother to offspring, exclusively or in addition to other routes of transmission. Think HIV or _Toxoplasma gondii_^[The acronym [CHEAPTORCHES](https://en.wikipedia.org/wiki/Vertically_transmitted_infection#Types_of_infections) includes many vertically transmitted pathogens of humans.] or _Wolbachia_. This mother-to-offspring route is called vertical transmission, as opposed to horizonal, which includes everything else we have mentioned so far. 
+And then of course there is the probability of transmission given that a predator consumes an infected prey (essentially the $\pi$ we have seen before). 
 
-Vertical transmission can be divided further by how the parasite gets into the offspring. Some parasites move from the mother into the egg (transovarial) or across the placenta into the embryo (transplacental), which is sometimes called "true" vertical transmission. These tend to be obligately vertically transmitted, meaning that is (virtually) the only way they get transmitted^[There are some really interesting questions about whether a parasite that is solely vertically transmitted can afford to be at all virulent, and whether those that _are_ virulent have some sneaky, unobserved means of transmission... more on this another time.]. Others, called "pseudo" vertically transmitted, are transferred during birth or egg laying, like accidental contamination. This opportunitistic route of transmission is usually a side gig for a horizontally transmitted parasite, but hey, Nature is complicated and these are not hard and fast rules. 
+With all of these pieces I believe we could kludge together some sort of reasonable term. I'll leave it as an exercise for you^[This usually means the author was too lazy to complete the work their self.].
 
-Anyway, in terms of how you might describe vertical transmission mathematically, it really does not matter whether it is true or pseudovertical transmission. It just looks like birth into an infected class.
+
+# Vertical transmission
+
+Lastly, there are some infections that are passed on from mother to offspring, exclusively or in addition to other routes of transmission. Think HIV or _Toxoplasma gondii_^[The acronym [CHEAPTORCHES](https://en.wikipedia.org/wiki/Vertically_transmitted_infection#Types_of_infections) includes many vertically transmitted pathogens of humans.] or _Wolbachia_. This mother-to-offspring route is called vertical transmission, as opposed to horizontal, which includes everything else we have mentioned so far. It is separated out because while all other forms of transmission require some sort of contact between a source and a donor vertical transmission happens through reproduction. It also leads to some very different evolutionary outcomes, but more on this later.
+
+Vertical transmission can be divided further by how the parasite gets into the offspring. Some parasites move from the mother into the egg (transovarial) or across the placenta into the embryo (transplacental), which is sometimes called _true vertical transmission_. These tend to be obligately vertically transmitted, meaning that this is (virtually) the only way they get transmitted^[There are some really interesting questions about whether a parasite that is solely vertically transmitted can afford to be at all virulent, and whether those that _are_ virulent have some sneaky, unobserved means of transmission... more on this another time.]. Others, called _pseudo vertically transmitted_, are transferred during birth or egg laying, via  contamination from blood or goop or whatnot^[I'm an ecologist, not a obstetrician.]. This opportunistic route of transmission is usually a side gig for a horizontally transmitted parasite, but hey, Nature is complicated and these are not hard and fast rules. 
+
+Anyway, in terms of how you might describe vertical transmission mathematically, it really does not matter whether it is true or pseudo-vertical transmission. It just looks like birth into an infected class.
 $$
 \frac{dI}{dt} = b \phi I +\dots
 $$
-where $b$ is the birth rate of the hosts and some fraction, $\phi$, of those born to infecteds are born infected. If $\phi = 1$ then all of the offspring of an infected are born infected, but if $\phi < 1$ then some proportion ($1-\phi$) are born uninfected, into the susceptible class. Easy peasy, right?
+where $b$ is the birth rate of the hosts and some fraction, $\phi$, of those born to infecteds are born infected. If $\phi = 1$ then all of the offspring of an infected are born infected, but if $\phi < 1$ then some proportion ($1-\phi$) are born uninfected, into the susceptible class ($\frac{ds}{dt} = b (1-\phi) I + b S + \dots$). Easy peasy, right?
 
 # Final notes
 
-* these are artificial distinctions; not every parasite fits neatly into a box. Moreover, there are other ways of classifying modes of transmission.
+Let me end with a few final thoughts:
 
-* Note that often there are bioligcally important distinctions in how parasites are transmitted that might be modeled essentially the same way. E.g., true vs. pseudovertical transmission, biological vs. mechanical transmission by vectors.
+* These are artificial distinctions; not every parasite fits neatly into a box. Moreover, there are other ways of classifying modes of transmission that might be more useful for different purposes.
+
+* Biologically important distinctions in how parasites are transmitted do not always lead to different ways of describing transmission. Remember, true and pseudo-vertical transmission are described essentially the say way as are biological and mechanical transmission by vectors. Even transmission from the environment and via free-swimming, host-seeking parasites might be described the same way! 
+
+* All of the mathematics I have presented are simplified forms. They are great places to start, but sometimes the realities of biology force us to deviate from these simple forms. As I noted in the beginning, there is a lot of biology wrapped up in transmission!
+
+* It can be terribly useful to step back from transmission as a single process and instead focus on the several steps involved. For instance, does an intervention reduce contact rates (e.g., $C(N)$) or the likelihood that a contact is with an infected individual (i.e., $I/N$) or the probability^[We might further break this apart into the infectiousness of the donor $I$ and the susceptibility of the recipient $S$.] that a contact with an infected will lead to an infection ($\pi$)?
 
