--- a/Transmission.Rmd
+++ b/Transmission.Rmd
@@ -113,7 +113,7 @@ R_{0_{DD}} = \frac{\beta N}{\alpha + \gamma}.
 $$
 This means that the ability for an infection to take-off in a population depends on the size (or density) of the population ($N$). Below some critical population size, the infection cannot successfully invade. Sure, there may be a bit of transmission, but it should sputter out. 
 
-This density-dependent logic forms the basis for culling to prevent disease from invading wildlife and agricultural populations^[I'm focusing on the invasion side of things. Culling or depopulation is also used to prevent continued transmission during epidemics of economically important diseases such as avian influenza in chickens, African swine fever in pigs, and foot and mouth disease in cattle.]. It has historically been applied broadly in wildlife because there are few other levers to pull^[For instance, [culling of Badgers, which can carry tuberculosis, in the UK.](https://www.nytimes.com/2019/03/09/science/culling-badgers-disease.html)].
+This density-dependent logic forms the basis for culling to prevent disease from invading wildlife and agricultural populations^[I'm focusing on the invasion side of things. Culling or depopulation is also used to prevent continued transmission during epidemics of economically important diseases such as avian influenza in chickens, African swine fever in pigs, and foot and mouth disease in cattle.]. It has historically been applied broadly in wildlife because there are few other levers to pull^[For instance, [culling of Badgers, which can carry tuberculosis, in the UK.](https://www.nytimes.com/2019/03/09/science/culling-badgers-disease.html)]. As in most things, the [reality is more complicated than theory](https://www.researchgate.net/publication/7080962_Should_we_expect_population_thresholds_for_wildlife_disease), but it remains an influental line of thought.
 
 
 # Which version is most realistic?
